--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,20 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "image-downloader": "^4.3.0",
+    "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-openidconnect": "^0.1.2",
     "pg": "^8.12.0"
   }
 }
