--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-openidconnect": "^0.1.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "razorpay": "^2.9.4"
   }
 }
