Refactor: Add client components.json file
This commit adds a new file, , which includes configuration settings for the client components. The file specifies the schema, style, and other properties related to the components. This addition will help in organizing and managing the client components effectively.

--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,21 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
     "image-downloader": "^4.3.0",
     "init": "^0.1.2",
+    "lucide-react": "^0.439.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-   
     "react-router-dom": "^6.23.1",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
